--- a/src/exercicios/14/index.css
+++ b/src/exercicios/14/index.css
@@ -1,6 +1,10 @@
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #ffffff;
+  color: #333333;
+}
 
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
 }
