--- a/src/exercicios/16/index.css
+++ b/src/exercicios/16/index.css
@@ -1,6 +1,9 @@
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+}
 
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
 }
